--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 
 :root {
+  background-color: black;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -13,7 +14,6 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  min-width: 100vw;
 }
 
